--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@ layout: default
         </button>
     </div>
     <div class="bio">
+        7
+        <br>
 	    {{ site.description }}
+        <br>
+        u({{ site.url }})
+        <br>
+        base({{ site.baseurl }})
         <p>
 	    <a href="{{ site.url }}{{ site.baseurl }}/about/">> About me</a>
         </p>
