--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@ layout: default
         </button>
     </div>
     <div class="bio">
+
 	    {{ site.description }}
+        <br>
+        u({{ site.url }})
+        <br>
+        base({{ site.baseurl }})
+        <br>
+        perma({{ site.permalink }})
         <p>
-	    <a href="{{ site.baseurl }}/about/">> About me</a>
+	    <a href="{{ site.url }}{{ site.baseurl }}/about/"> About me</a>
         </p>
     </div>
 
