--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
         <br>
         perma({{ site.permalink }})
         <p>
-	    <a href="{{ site.url }}{{ site.baseurl }}/about/"> About me</a>
+	    <a href="{{ site.baseurl }}/about/"> About me</a>
         </p>
     </div>
 
