--- a/404.html
+++ b/404.html
@@ -1,14 +1,14 @@
 ---
-layout: page
-title: "404: Page not found"
+layout: error
+title: "404"
 permalink: 404.html
 ---
 <div class="flex-row-between">
-	<a href="{{ site.url }}{{ site.baseurl}}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+	<a href="/"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
 </div>
+<img src="images/error404.jpg" alt="hi" class="inline"/>
 <p>
-😕 Whoops... I've misplaced that URL or it's pointing to something that doesn't exist.
-If you think this is an error, please open an <a href="https://github.com/DavideBrie/Gesko/issues/new" target="_blank" rel="noopener noreferrer">issue</a>.
+Ressource does not exist.
 
 </p>
 
