--- a/about.html
+++ b/about.html
@@ -20,14 +20,11 @@ layout: default
         <li>
             <div class="direction-r">
                 <div class="flag-wrapper">
-                    <span class="flag">Freelance</span>
-                    <span class="time-wrapper"><span class="time">2010 - 2016</span></span>
+                    <span class="flag">Student</span>
+                    <span class="time-wrapper"><span class="time">2016 - 2021</span></span>
                 </div>
                 <div class="desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Convallis convallis tellus id interdum. A lacus 
-                    vestibulum sed arcu non odio euismod lacinia. Orci a scelerisque purus semper eget duis. 
-                    Læs mere: <a href="https://tristanwhite.info" target="_top">https://tristanwhite.info</a>
+                    Doing student stuff.
                 </div>
             </div>
         </li>
@@ -36,16 +33,11 @@ layout: default
         <li>
             <div class="direction-l">
                 <div class="flag-wrapper">
-                    <span class="flag">Rundhøjskolen</span>
-                    <span class="time-wrapper"><span class="time">2013 - 2016</span></span>
+                    <span class="flag">Yet, another student</span>
+                    <span class="time-wrapper"><span class="time">2021 - 2022</span></span>
                 </div>
                 <div class="desc">
-                    Som <strong>IT-vejleder</strong> in metus vulputate eu scelerisque felis imperdiet. 
-                    Eget nunc scelerisque viverra mauris in. Quis imperdiet massa tincidunt nunc pulvinar sapien et. 
-                    Diam ut venenatis tellus in metus. Nisi porta lorem mollis aliquam ut porttitor leo a. Proin 
-                    sagittis nisl rhoncus mattis. Velit dignissim sodales ut eu sem integer vitae justo. Interdum 
-                    velit laoreet id donec ultrices tincidunt. Donec ultrices tincidunt arcu non sodales. 
-                    Lectus urna duis convallis convallis tellus. 
+                    Five years not enough, student for one more. 
                 </div>
             </div>
         </li>
@@ -54,26 +46,11 @@ layout: default
         <li>
             <div class="direction-r">
                 <div class="flag-wrapper">
-                    <span class="flag">Serverhosting A/S</span>
-                    <span class="time-wrapper"><span class="time">2012</span></span>
+                    <span class="flag">Question</span>
+                    <span class="time-wrapper"><span class="time">2022 - ?</span></span>
                 </div>
                 <div class="desc">
-                    Cras semper auctor neque vitae tempus quam pellentesque. Tempor orci dapibus ultrices
-                    in iaculis nunc sed augue. Urna porttitor rhoncus dolor purus non. 
-                </div>
-            </div>
-        </li>
-
-
-        <!-- Item 4 -->
-        <li>
-            <div class="direction-l">
-                <div class="flag-wrapper">
-                    <span class="flag">IT-teknolog</span>
-                    <span class="time-wrapper"><span class="time">2010 - 2012</span></span>
-                </div>
-                <div class="desc">
-                    Works well on mobile too! Try to scale down the window if you're on a pc
+                    Six years enough ? 
                 </div>
             </div>
         </li>
